[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "active>=0.0.5a0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "openai",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]
